--- a/erpnext/public/js/schools/assessment_result_tool.html
+++ b/erpnext/public/js/schools/assessment_result_tool.html
@@ -1,8 +1,8 @@
 <table class="table table-bordered assessment-result-tool">
     <thead>
         <tr>
-            <th style="width: 100px" rowspan="2">Student</th>
-            <th style="width: 200px" rowspan="2">Student Name</th>
+            <th style="width: 90px" rowspan="2">Student</th>
+            <th style="width: 170px" rowspan="2">Student Name</th>
             {% for c in criteria %}
             <th class="score" style="width: 100px">{{ c.assessment_criteria }}</th>
             {% endfor %}
@@ -11,32 +11,34 @@
         </tr>
         <tr>
             {% for c in criteria %}
-            <th class="score" style="width: 100px">{{ c.maximum_score }}</th>
+            <th class="score" style="width: 100px">Score (Out of {{ c.maximum_score }})</th>
             {% endfor %}
-            <th class="score" style="width: 100px">{{max_total_score}}</th>
+            <th class="score" style="width: 100px">Score (Out of {{max_total_score}})</th>
         </tr>
     </thead>
     <tbody>
         {% for s in students %}
         <tr 
-            {% if(s.assessment_details) { %} class="text-muted" {% } %}
+            {% if(s.assessment_details && s.docstatus && s.docstatus == 1) { %} class="text-muted" {% } %}
+            {% if(s.assessment_details && s.docstatus && s.docstatus == 0) { %} class="like-disabled-input" {% } %}
             data-student="{{s.student}}">
+
             <td>{{ s.student }}</td>
             <td>{{ s.student_name }}</td>
             {% for c in criteria %}
             <td>
-                <input type="text"
+                <input type="number" class="student-result-data" 
                     data-max-score="{{c.maximum_score}}"
                     data-criteria="{{c.assessment_criteria}}"
                     data-student="{{s.student}}"
                     {% if(s.assessment_details) { %}
-                        disabled
-                        value="{{s.assessment_details[c.assessment_criteria]}}"
+                        {% if(s.docstatus && s.docstatus === 1) { %} disabled {% } %}
+                        value="{{s.assessment_details[c.assessment_criteria][0]}}"
                     {% } %}/>
             </td>
             {% endfor %}
             <td data-student="{{s.student}}" class="total-score">
-                {% if(s.assessment_details) { %} {{s.assessment_details.total_score}} {% } %}
+                {% if(s.assessment_details) { %} {{s.assessment_details.total_score[0]}} {% } %}
             </td>
         </tr>
         {% endfor %}
