--- a/erpnext/hr/report/monthly_salary_register/monthly_salary_register.html
+++ b/erpnext/hr/report/monthly_salary_register/monthly_salary_register.html
@@ -1,3 +1,21 @@
+
+<style>
+    .print-format table, .print-format tr,
+    .print-format td, .print-format div, .print-format p {
+        font-family: Monospace;
+        line-height: 200%;
+        vertical-align: middle;
+    }
+
+    @media screen {
+        .print-format {
+            max-width: 24in;
+            padding: 0.25in;
+            min-height: 8.5in;
+        }
+    }
+</style>
+
 <div style="margin-bottom: 7px;" class="text-center">
 	{%= frappe.boot.letter_heads[filters.letter_head || frappe.defaults.get_default("letter_head")] %}
 </div>
@@ -9,7 +27,7 @@
 	<thead>
 		<tr>
 			{% for(var i=1, l=report.columns.length; i<l; i++) { %}
-				<th class="text-right">{%= report.columns[i].label %}</th>
+				<th class="text-right" style="max-width: 4%;">{%= report.columns[i].label %}</th>
 			{% } %}
 		</tr>
 	</thead>
