Improve Salary Register
Check if fieldname is a number to format.

Start the Html Salary with hidden fields and check if they not empty and increase the width...
This will remove Blank fields from the report.

--- a/erpnext/hr/report/salary_register/salary_register.html
+++ b/erpnext/hr/report/salary_register/salary_register.html
@@ -21,7 +21,7 @@
 				{% for(var i=1, l=report.columns.length; i<l; i++) { %}
 					<td class="text-right">
 						{% var fieldname = report.columns[i].field; %}
-                        {% if (i > 10) { %}
+                        {% if (!isNaN(row[fieldname])) { %}
                             {%= format_currency(row[fieldname]) %}
                         {% } else { %}
 						    {% if (!is_null(row[fieldname])) { %}
