--- a/erpnext/accounts/doctype/opening_invoice_creation_tool/opening_invoice_creation_tool_dashboard.html
+++ b/erpnext/accounts/doctype/opening_invoice_creation_tool/opening_invoice_creation_tool_dashboard.html
@@ -1,44 +1,32 @@
-<h5 style="margin-top: 0px;">Opening Invoice Summery</h5>
-{% $.each(data, (company, summery) => { %}
-<h6><a class="company-link"> {{ company }}</a></h6>
-{% $.each(["Sales Invoice", "Purchase Invoice"], (idx, doctype) => { %}
-{% if summery[doctype] %}
-<div class="row">
-	<div class="col-xs-3">
-		<a class="small invoice-link" data-type="{{ doctype }}" data-company="{{ company }}"> {{ __("{0}", [doctype]) }}</a>
-	</div>
-	<div class="col-xs-3">
-		<span class=" small">{{ __("Total: {0}", [summery[doctype].total_invoices]) }}</span>
-	</div>
-	<div class="col-xs-6 small text-right">
-		<span class="inline-graph">
-			<span class="inline-graph-half" title="{{ __("Total Outstanding Amount") }}">
-				<span class="inline-graph-count">
-					{% let outstanding_amt = summery[doctype].outstanding_amount %}
-					{{ __("{0}", [format_currency(outstanding_amt, summery.currency, 2)]) }}
-				</span>
-				<span class="inline-graph-bar">
-					{% let max_due = max_count[doctype].max_due %}
-					<span class="inline-graph-bar-inner"
-						style="width: {{ cint(outstanding_amt/max_due * 100) }}%">
-					</span>
-				</span>
-			</span>
-			<span class="inline-graph-half" title="{{ __("Total Paid Amount") }}">
-				<span class="inline-graph-count">
-					{% let paid_amt = summery[doctype].paid_amount %}
-					{{ __("{0}", [format_currency(paid_amt, summery.currency, 2)]) }}
-				</span>
-				<span class="inline-graph-bar">
-					{% let max_paid = max_count[doctype].max_paid %}
-					<span class="inline-graph-bar-inner dark"
-						style="width: {{ cint(paid_amt/max_paid * 100) }}%">
-					</span>
-				</span>
-			</span>
-		</span>
-	</div>
-</div>
-{% endif %}
-{% }); %}
+<h5 style="margin-top: 0px;">{{ __("Opening Invoices Summary") }}</h5>
+{% $.each(data, (company, summary) => { %}
+<h6 style="margin: 15px 0px -10px 0px;"><a class="company-link"> {{ company }}</a></h6>
+
+<table class="table table-bordered small">
+	<thead>
+		<tr>
+			<td style="width: 33%">{{ __("Invoice Type") }}</td>
+			<td style="width: 33%" class="text-right">{{ __("Opening Invoices") }}</td>
+			<td style="width: 33%" class="text-right">{{ __("Total Outstanding") }}</td>
+		</tr>
+	</thead>
+	<tbody>
+		{% $.each(["Sales Invoice", "Purchase Invoice"], (idx, doctype) => { %}
+		{% if summary[doctype] %}
+		<tr>
+			<td>
+				<a class="invoice-link" data-type="{{ doctype }}" data-company="{{ company }}">
+					{{ __(doctype) }}</a>
+			</td>
+			<td class="text-right">
+				{{ summary[doctype].total_invoices }}
+			</td>
+			<td class="text-right">
+				{{ format_currency(summary[doctype].outstanding_amount, summary.currency, 2) }}
+			</td>
+		</div>
+		{% endif %}
+		{% }); %}
+	</tbody>
+</table>
 {% }); %}
