--- a/erpnext/accounts/report/trial_balance_for_party/trial_balance_for_party.html
+++ b/erpnext/accounts/report/trial_balance_for_party/trial_balance_for_party.html
@@ -15,8 +15,7 @@
         </tr>
     </thead>
     <tbody>
-        {% for(var i=0, l=data.length; i
-        <l; i++) { %} {% if (data[i][ "asset_category"]) { %} <tr>
+        {% for(var i=0, l=data.length; i<l; i++) <tr>
             <td>{%= data[i]["party"] %}</td>
             <td>{%= data[i]["debit"] %}</td>
             <td>{%= data[i]["credit"] %}</td>
