--- a/erpnext/accounts/report/trial_balance_for_party/trial_balance_for_party.html
+++ b/erpnext/accounts/report/trial_balance_for_party/trial_balance_for_party.html
@@ -15,14 +15,19 @@
         </tr>
     </thead>
     <tbody>
-        {% for(var i=0, l=data.length; i<l; i++) <tr>
+        {% for(var i=0, l=data.length; i<l; i++) 
+			{ %} 
+
+			<tr>
             <td>{%= data[i]["party"] %}</td>
             <td>{%= data[i]["debit"] %}</td>
             <td>{%= data[i]["credit"] %}</td>
             <td>{%= data[i]["party_name"] %}</td>
             <td>{%= data[i]["currency"] %}</td>
             </tr>
-            {% } %} {% } %}
+            {% } 
+             
+             %}
 
     </tbody>
 </table>
