--- a/erpnext/accounts/report/trial_balance_for_party/trial_balance_for_party.html
+++ b/erpnext/accounts/report/trial_balance_for_party/trial_balance_for_party.html
@@ -7,11 +7,14 @@
 <table class="table table-bordered">
     <thead>
         <tr>
-            <th style="width: 15%">{%= __("Party") %}</th>
-            <th style="width: 15%">{%= __("Debit") %}</th>
-            <th style="width: 15%">{%= __("Credit") %}</th>
-            <th style="width: 15%">{%= __("Party Name") %}</th>
-            <th style="width: 40%">{%= __("Currency") %}</th>
+			<th style="width: 25%">{%= __("Party Name") %}</th>
+            <th style="width: 12%">{%= __("Opening (Dr)") %}</th>
+            <th style="width: 12%">{%= __("Opening (Cr)") %}</th>
+            <th style="width: 12%">{%= __("Debit") %}</th>
+            <th style="width: 12%">{%= __("Credit") %}</th>
+            <th style="width: 15%">{%= __("Closing (Dr)") %}</th>
+            <th style="width: 15%">{%= __("Closing (Cr)") %}</th>
+            <th style="width: 8%">{%= __("Currency") %}</th>
         </tr>
     </thead>
     <tbody>
@@ -19,11 +22,16 @@
 			{ %} 
 
 			<tr>
-            <td>{%= data[i]["party"] %}</td>
+            <td>{%= data[i]["party_name"] %}</td>
+            <td>{%= data[i]["opening_debit"] %}</td>
+            <td>{%= data[i]["opening_credit"] %}</td>
             <td>{%= data[i]["debit"] %}</td>
             <td>{%= data[i]["credit"] %}</td>
-            <td>{%= data[i]["party_name"] %}</td>
+            <td>{%= data[i]["closing_debit"] %}</td>
+            <td>{%= data[i]["closing_credit"] %}</td>
             <td>{%= data[i]["currency"] %}</td>
+
+
             </tr>
             {% } 
              
