Asset report fixx

--- a/erpnext/accounts/report/asset_report/asset_report.html
+++ b/erpnext/accounts/report/asset_report/asset_report.html
@@ -1,14 +1,14 @@
 <div style="margin-bottom: 7px;">
     {%= frappe.boot.letter_heads[frappe.defaults.get_default("letter_head")] %}
 </div>
-<h2 class="text-center">{%= __("Trial Balance For Party") %}</h2>
+<h2 class="text-center">{%= __("Asset Report") %}</h2>
 <h4 class="text-center">{%= filters.account && (filters.account + ", "+filters.report_date)  || "" %} {%= filters.company %}</h4>
 <hr>
 <table class="table table-bordered">
     <thead>
 		<tr>
 			{% for(var i=1, l=report.columns.length; i<l; i++) { %}
-				<th class="text-right">{%= report.columns[i].label %}</th>
+				<th class="text-right" style = "width:15%">{%= report.columns[i].label %}</th>
 			{% } %}
 		</tr>
 	</thead>
@@ -19,7 +19,7 @@
 			%}
 			<tr>
 				{% for(var i=1, l=report.columns.length; i<l; i++) { %}
-					<td class="text-right">
+					<td class="text-right" style = "width:15%">
 						{% var fieldname = report.columns[i].field; %}
 						{% if (report.columns[i].fieldtype=='Currency' && !isNaN(row[fieldname])) { %}
 							{%= format_currency(row[fieldname]) %}
