--- a/erpnext/accounts/report/asset_report/asset_report.html
+++ b/erpnext/accounts/report/asset_report/asset_report.html
@@ -3,6 +3,7 @@
 </div>
 <h2 class="text-center">{%= __("Asset Report") %}</h2>
 <h4 class="text-center">{%= filters.account && (filters.account + ", "+filters.report_date)  || "" %} {%= filters.company %}</h4>
+<h4 class="text-center">{%= frappe.defaults.get_user_default("fiscal_year")  %}</h4>
 <hr>
 <table class="table table-bordered">
     <thead>
