--- a/erpnext/accounts/report/trial_balance_for_party/trial_balance_for_party.html
+++ b/erpnext/accounts/report/trial_balance_for_party/trial_balance_for_party.html
@@ -8,6 +8,12 @@
     <thead>
         <tr>
 			<th style="width: 25%">{%= __("Party Name") %}</th>
+            {% if("supplier_type" in data[0]) { %}
+                <th style="width: 15%">{%= __("Supplier Type") %}</th>
+            {% } %}
+            {% if("customer_group" in data[0]) { %}
+                <th style="width: 15%">{%= __("Customer Group") %}</th>
+            {% } %}
             <th style="width: 12%">{%= __("Opening (Dr)") %}</th>
             <th style="width: 12%">{%= __("Opening (Cr)") %}</th>
             <th style="width: 12%">{%= __("Debit") %}</th>
@@ -23,12 +29,21 @@
 
 			<tr>
             <td>{%= data[i]["party_name"] %}</td>
-            <td>{%= data[i]["opening_debit"] %}</td>
-            <td>{%= data[i]["opening_credit"] %}</td>
-            <td>{%= data[i]["debit"] %}</td>
-            <td>{%= data[i]["credit"] %}</td>
-            <td>{%= data[i]["closing_debit"] %}</td>
-            <td>{%= data[i]["closing_credit"] %}</td>
+            <td>
+                {% if(data[i]["supplier_type"]) { %}
+                    {%= data[i]["supplier_type"]  %}
+                {% } %}
+                {% if(data[i]["customer_group"]) { %}
+                    {%= data[i]["customer_group"]  %}
+                {% } %}
+
+            </td>
+            <td>{%= format_currency(data[i]["opening_debit"]) %}</td>
+            <td>{%= format_currency(data[i]["opening_credit"]) %}</td>
+            <td>{%= format_currency(data[i]["debit"]) %}</td>
+            <td>{%= format_currency(data[i]["credit"])  %}</td>
+            <td>{%= format_currency(data[i]["closing_debit"]) %}</td>
+            <td>{%= format_currency(data[i]["closing_credit"]) %}</td>
             <td>{%= data[i]["currency"] %}</td>
 
 
