--- a/erpnext/www/book_appointment/verify/index.html
+++ b/erpnext/www/book_appointment/verify/index.html
@@ -5,14 +5,12 @@
 {% endblock%}
 
 {% block page_content %}
-
-    {% if success==True %}
-        <div class="alert alert-success">
+    {%- set alert_class = 'alert-success' if success else 'alert-danger' -%}
+    <div class="alert {{ alert_class }}">
+        {% if success==True %}
             {{ _("Your email has been verified and your appointment has been scheduled") }}
-        </div>
-    {% else %}
-        <div class="alert alert-danger">
+        {% else %}
             {{ _("Verification failed please check the link") }}
-        </div>
-    {% endif %}
+        {% endif %}
+    </div>
 {% endblock%}
