--- a/erpnext/www/book_appointment/verify/index.html
+++ b/erpnext/www/book_appointment/verify/index.html
@@ -5,12 +5,14 @@
 {% endblock%}
 
 {% block page_content %}
-    {%- set alert_class = 'alert-success' if success else 'alert-danger' -%}
-    <div class="alert {{ alert_class }}">
-        {% if success==True %}
+
+    {% if success==True %}
+        <div class="alert alert-success">
             {{ _("Your email has been verified and your appointment has been scheduled") }}
-        {% else %}
+        </div>
+    {% else %}
+        <div class="alert alert-danger">
             {{ _("Verification failed please check the link") }}
-        {% endif %}
-    </div>
+        </div>
+    {% endif %}
 {% endblock%}
