fix(Stock Levels): Rounding and styling

--- a/erpnext/stock/dashboard/item_dashboard_list.html
+++ b/erpnext/stock/dashboard/item_dashboard_list.html
@@ -22,9 +22,9 @@
 							</span>
 						</span>
 					</span>
-					<span class="inline-graph-half" title="{{ __("Actual Qty {0} / Waiting Qty {1}", [d.actual_qty, d.pending_qty]) }}">
+					<span class="inline-graph-half" title="{{ __("Actual Qty {0} / Waiting Qty {1}", [flt(d.actual_qty, 6), flt(d.pending_qty, 6)]) }}">
 						<span class="inline-graph-count">
-							{{ d.actual_qty }} {{ (d.pending_qty > 0) ? ("(" + d.pending_qty+ ")") : "" }}
+							{{ d.actual_qty }} {{ (d.pending_qty > 0) ? ("(" + flt(d.pending_qty, 6) + ")") : "" }}
 						</span>
 						<span class="inline-graph-bar">
 							<span class="inline-graph-bar-inner dark"
